# demo-rust

./: .env  Cargo.toml
src/: lib.rs  main.rs
src/infrastructure/persistence/entity/: test.rs
src/infrastructure/system/: database.rs  server.rs
src/presentation/: mod.rs
src/presentation/controller/: home_controller.rs
src/presentation/ui/home/: index_template.rs
templates/: home.html
