[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[dependencies]

# Tiempo
chrono = "0.4"

# Para Hacer peticiones HTTP
reqwest = { version = "0.12", features = ["json"] }

# Para realizar operaciones asincronas usando eventos
tokio = { version = "1.41.0", features = ["full"] }

# Para Serializar y Deserealizar
serde = "1.0.214"

# El framework para levantar un servicio
actix-cors = "0.7.0"
actix-web = "4.9.0"

# Para realizar la conexion con MariaDB
sqlx = { version = "0.8.2", features = ["mysql", "runtime-async-std"] }

# Renderizador de templates
askama = "0.12.1"

# JWT
jsonwebtoken = "9.3.0"

# Para enciptar las contraseñas
bcrypt = "0.15.1"

# Environment Variables
dotenv = "0.15.0"

tracing = "0.1"
tracing-subscriber = "0.3"
home = "0.5.9"